2011-12-06  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/text/recognition.hh: Restore previous locale.

2011-12-06  Guillaume Lazzara  <z@lrde.epita.fr>

	Ensure current locale is C while calling Tesseract.

	* demo/viewer/main.cc: Move call to setLocale...
	* scribo/text/recognition.hh: ... Here.

2011-11-21  Guillaume Lazzara  <z@lrde.epita.fr>

	* README: update requirements information.

2011-11-16  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/text/recognition.hh: Fix code for Tesseract 3.01
	compatibility.

2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	Mention the ICDAR 2011 paper in SCRIBO's README.

	* README (Bibliography): Here.
	Fix copyright header.
	* src/README: Fix copyright header.

2011-09-19  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix paths in the SCRIBO viewer.

	* demo/viewer/demodir.hh.in (SCRIBO_PREFIX_BINDIR): Remove macro.
	(SCRIBO_PREFIX_LIBEXECDIR): New macro.
	* demo/viewer/runner.cc:
	s/SCRIBO_PREFIX_BINDIR/SCRIBO_PREFIX_LIBEXECDIR/.
	* demo/viewer/Makefile.am (do_subst): Substitute $libexecdir.

2011-09-15  Guillaume Lazzara  <lazzara@caroussel.lrde.epita.fr>

	Adjust font size in PDF reconstruction.

	* demo/xml2doc/templates/html/main.xsl,
	* demo/xml2doc/templates/html/main_base64.xsl,
	* demo/xml2doc/templates/pdf/line.xsl: Here.

2011-09-13  Guillaume Lazzara  <z@lrde.epita.fr>

	* README: Add more information.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix Scribo build system.

	* demo/viewer/Makefile.am: Take into account no-strict-aliasing
	flag.

	* demo/review/Makefile.am,
	* src/toolchain/nepomuk/Makefile.am: Do not distribute some
	examples.

2011-09-13  Guillaume Lazzara  <z@lrde.epita.fr>

	* demo/viewer/main.cc: Fix an issue with Tesseract 2.x and
	specific locales.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve text justification in HTML document reconstruction.

	* demo/xml2doc/templates/html/css.css,
	* demo/xml2doc/templates/html/main.xsl,